kubernetes/observability/opensearch/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensearch-dashboards
  namespace: opensearch
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: "" # Will be overridden in homelab-secrets
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opensearch-service-dashboards
                port:
                  number: 5601
